style.css
/*general*/
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@600&display=swap');
:root {--pink: hsl(322, 100%, 66%);--very-pale-cyan: hsl(193, 100%, 96%);--very-dark-cyan: hsl(192, 100%, 9%);--grayish-blue: hsl(208, 11%, 55%);}
img {max-width: 100%;}
* {margin: 0;padding: 0;box-sizing: border-box;}
body {min-height: 100vh;font-size: 18px;font-family: "Open Sans", sans-serif;font-weight: 400;}
h1, h2 {font-family: "Poppins", sans-serif;font-weight: 600;}
h1, h2 {color: var(--very-dark-cyan);}
button {background-color: #fff; border: none;border-radius: 50px;padding: .6rem;box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;font-family: "Open Sans", sans-serif;font-weight: 700;}
button:hover {opacity: 80%;}
.free {border: none;border-radius: 50px;padding: 1.1rem;color: #fff;box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;font-family: "Open Sans", sans-serif;font-weight: 700;background-color:hsl(322, 100%, 66%);}
.free:hover {transform: scale(1.05);transition: transform 0.2s ease-in-out;}
.attribution { font-size: 11px; text-align: center; }
.attribution a { color: hsl(228, 45%, 44%); }/*general*/

.background {
    background-image: url("images/bg-hero-mobile.svg");
    background-repeat: no-repeat;
    background-size: 100% 100%;
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: -1;
    top: 0;
}

header {
    display: flex;
    justify-content: space-between;
    padding: 1rem;
    margin-bottom: 3rem;
}

header img {
    width: 35%;
}

.main {
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

.main p {
    line-height: 1.5;
    color:hsl(192, 100%, 9%);
}

section {
    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
    border-radius: 10px;
}

.desktoprow1 {
    display: flex;
    flex-direction: column;
    text-align: center;
    gap: 5rem;
    padding: 1.96rem;
    margin-bottom: 4rem;
}

.desktoprow2 {
    text-align: center;
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    padding: 2.5rem;
    margin-bottom: 4rem;
    width: 90%;
    margin: auto;
    background-color: #fff;
}

.desktoprowreverse1 {
    text-align: center;
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    padding: 1.96rem;
    margin-bottom: 4rem;
    width: 90%;
    margin: auto;
    background-color: #fff;
}

.desktoprow3 {
    text-align: center;
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    padding: 2rem;
    margin-bottom: 5rem;
    width: 90%;
    margin: auto;
    background-color: #fff;
}

.background2 {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

section p {
    color:hsl(208, 11%, 55%);
}

.container {
    margin: auto;
    width: 85%;
    border-radius: 25px;
    text-align: center;
    color:var(--very-dark-cyan);
    padding: 1rem;
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    position: relative;
    top: 3.5rem;
    background-color: #fff;
    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
}

footer {/*footer settings*/
    background-color:hsl(192, 100%, 9%);
    padding: 7rem 2rem 2rem 2rem;
    color: #fff;
}

.desktopfooterrow1 {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.location img {/*location, phone, email*/
    width: 13px;
    height: 18px;
}

.location, .phone, .email {
    display: flex;
    gap: 1rem;
    
}

.info {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.links, .links1, .links2 {
    margin-top: 1.5rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}/*location, phone, email*/

.socials {/*social media icons settings*/
    display: flex;
    justify-content: center;
    gap: 1.5rem;
    padding: 3rem 0 1rem 0;
}
.social {
    fill: #fff;
    width: 125%;
}
.social:hover {
    fill:hsl(322, 100%, 66%);
}/*social media icons settings*/

a {
    color: #fff;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

.copy {
    text-align: center;
}
@media screen and (min-width: 1024px) {/*desktop*/
    body {
        width: 100%;
    }

    .background {
        background-image: url("images/bg-hero-desktop.svg");
    }
    .logotop {
        width: 15%;
    }

    header {
        padding: 3.5rem 3.5rem 0rem 3.5rem;
    }

    header button {
        padding: 1rem;
        width: 10rem;
    }

    .desktoprow1 {
        text-align: start;
        display: flex;
        flex-direction: row;
        align-items: center;
    }

    .desktoprow1 button{
        width: 55%;
    }

    .mockup {
        padding: 1.5rem;
        width: 60%;
    }

    .desktoprow2 {
        display: flex;
        flex-direction: row-reverse;
        align-items: center;
        justify-content: space-evenly;
        margin-bottom: 5rem;
    }

    .desktoprow2 .main {
        width: 35%;
        text-align: start;
    }

    .together {
        width: 35%;
    }
    
    .desktoprowreverse1 {
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: space-evenly;
        margin-bottom: 5rem;
    }

    .desktoprowreverse1 .main {
        width: 37%;
        text-align: start;
    }
    
    .conversation {
        width: 35%;
    }

    .desktoprow3 {
        display: flex;
        flex-direction: row-reverse;
        align-items: center;
        justify-content: space-evenly;
    }
    
    .desktoprow3 .main {
        width: 35%;
        text-align: start;
    }

    .users {
        width: 35%;
    }

    .container {
        display: flex;
        justify-content: center;
        align-items: center;
        padding: 2rem;
        width: 65%;
        top: 5rem;
        
    }

    .container button {
        width: 40%;
    }

    footer {
        border: 1px solid black;
        padding: 10rem 4rem 6rem 4rem;
        display: flex;
    }

    .info {
        width: 45%;
        display: flex;
        gap: 2rem;
    }

    .links1, .links2 {
        width: 6rem;
    }

    .links {
        width: 100%;
        display: flex;
        flex-direction: row;
    }

    .desktopfooterrow2 {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        gap: 8rem;
    }

    .copy {
        font-size: 14px;
    }
}

